--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/router": "^9.1.9",
     "rxjs": "~6.5.4",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -31,22 +31,22 @@
     "@angular/language-service": "^9.1.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.42",
+    "@types/node": "^14.0.5",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.2",
     "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.1.1",
-    "protractor": "~5.4.3",
+    "protractor": "~7.0.0",
     "tailwindcss": "^1.4.6",
-    "ts-node": "~8.3.0",
+    "ts-node": "~8.10.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.7.5"
   }
 }
