--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/router": "^9.1.9",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-fileinput": "^5.1.2",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
